[tool.poetry]
name = "robusta_actions"
version = "0.0.1"
description = ""
authors = ["Rivtower Technologies <contact@rivtower.com>"]

[tool.poetry.dependencies]
tenacity = "^8.2.2"

[tool.poetry.dev-dependencies]
robusta-cli = "^0.10.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"